Added .ogg file support to the scons asset script. This is pretty handy considering Android and Linux hosts can't play .mp3

--- a/tools/SConstruct
+++ b/tools/SConstruct
@@ -178,7 +178,7 @@ audioPath = ASSETS_DIR+"/audio"
 
 if os.path.exists(audioPath):
 	for item in os.listdir(audioPath):
-		if fnmatchList(item, ("*.mp3", "*.wav")):
+		if fnmatchList(item, ("*.mp3", "*.ogg", "*.wav")):
 			fullPath = os.path.join(audioPath, item)
 
 			outputPath = os.path.join(RES_DIR+"/audio/", item)
